logging developer output to stdout [757]